# teambeat

./: .gitignore  CHECKS  Procfile  README.md  gconfig.py  manage.py  pyproject.toml  requirements.txt
account/: admin.py  decorators.py  forms.py  models.py  views.py
account/migrations/: 0001_initial.py  0002_passwordreset.py  0003_alter_user_username.py  0004_organization_orgmember.py  0005_organization_created_organization_modified.py  0006_credit.py  0007_credit_amount.py  0008_alter_credit_options.py  0009_credit_upgraded_level.py
account/templates/: generic-form.html
tbeat/: asgi.py  context_processors.py  middleware.py  settings.py  urls.py  wsgi.py
teams/: admin.py  forms.py  models.py  tasks.py  views.py
teams/migrations/: 0001_initial.py  0002_scrum_emailmember_active_status.py  0003_team_hours_open.py  0004_team_questions.py  0005_status_active.py  0006_team_next_report_team_report_sent.py  0007_alter_team_next_report.py  0008_remove_team_report_sent_team_owners.py  0009_alter_scrum_options.py  0010_alter_scrum_options.py  0011_rename_emailmember_member.py  0012_remove_member_email_remove_member_name_member_user_and_more.py  0013_remove_team_owners_team_org.py  0014_member_view_ratings.py  0015_member_report_status.py  0016_remove_team_days_team_days_of_week.py  0017_alter_team_options.py  0018_alter_member_options.py
teams/static/: site.webmanifest
teams/templatetags/: teamtags.py
wiki/: admin.py  forms.py  models.py  views.py
wiki/migrations/: 0001_initial.py  0002_wiki_org.py  0003_alter_page_path.py  0004_version_title.py  (+2 more)
(+34 files in other folders)
